--- a/community_gis/templates/dashboard/education.html
+++ b/community_gis/templates/dashboard/education.html
@@ -146,7 +146,9 @@ tr:hover {
     tempParameter = defaultParameters;
     // if(maleg === 'poly'){
         
-    //     mmxlayer = new L.tileLayer.wms('https://makerghat.urbansciences.in/geoserver/geonode/ows', {
+
+        
+    //     mmxlayer = new L.tileLayer.wms('https://communitygis.net/geoserver/geonode/ows', {
 
     //     layers: 'geonode:maha_village_edu_centroid_ver2',
     //     format: 'image/png',
@@ -157,14 +159,14 @@ tr:hover {
     // mmxlayer.addTo(mymap);
     // addWMSLegend(mmxlayer.options.layers);
 
-    // LAYER = "https://makerghat.urbansciences.in/geoserver/geonode/wms?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetFeatureInfo&LAYERS="+mmxlayer.options.layers+"&QUERY_LAYERS="+mmxlayer.options.layers;
+    // LAYER = "https://communitygis.net/geoserver/geonode/wms?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetFeatureInfo&LAYERS="+mmxlayer.options.layers+"&QUERY_LAYERS="+mmxlayer.options.layers;
     // LayerList.push(mmxlayer);
 
 
     // }
     if(maleg === 'bifo'){
     
-    mmxlayer = new L.tileLayer.wms('https://makerghat.urbansciences.in/geoserver/geonode/ows', {
+    mmxlayer = new L.tileLayer.wms('https://communitygis.net/geoserver/geonode/ows', {
 
     layers: 'geonode:inst_bifocals_4may2020',
     format: 'image/png',
@@ -175,7 +177,7 @@ tr:hover {
     mmxlayer.addTo(mymap);
     addWMSLegend(mmxlayer.options.layers);
 
-    LAYER = "https://makerghat.urbansciences.in/geoserver/geonode/wms?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetFeatureInfo&LAYERS="+mmxlayer.options.layers+"&QUERY_LAYERS="+mmxlayer.options.layers;
+    LAYER = "https://communitygis.net/geoserver/geonode/wms?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetFeatureInfo&LAYERS="+mmxlayer.options.layers+"&QUERY_LAYERS="+mmxlayer.options.layers;
     LayerList.push(mmxlayer);
 
 
@@ -183,7 +185,7 @@ tr:hover {
     
 else if(maleg === 'iti'){
        
-        mmylayer = new L.tileLayer.wms('https://makerghat.urbansciences.in/geoserver/geonode/ows', {
+        mmylayer = new L.tileLayer.wms('https://communitygis.net/geoserver/geonode/ows', {
 
         layers: 'geonode:tot_iti_13apr2020',
         format: 'image/png',
@@ -197,14 +199,14 @@ else if(maleg === 'iti'){
         mmylayer.addTo(mymap);
         addWMSLegend(mmylayer.options.layers);
 
-        LAYER = "https://makerghat.urbansciences.in/geoserver/geonode/wms?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetFeatureInfo&LAYERS="+mmylayer.options.layers+"&QUERY_LAYERS="+mmylayer.options.layers;
+        LAYER = "https://communitygis.net/geoserver/geonode/wms?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetFeatureInfo&LAYERS="+mmylayer.options.layers+"&QUERY_LAYERS="+mmylayer.options.layers;
         LayerList.push(mmylayer);
         }
 
 
         else if(maleg === 'msbvee'){
        
-       mmylayer = new L.tileLayer.wms('https://makerghat.urbansciences.in/geoserver/geonode/ows', {
+       mmylayer = new L.tileLayer.wms('https://communitygis.net/geoserver/geonode/ows', {
 
        layers: 'geonode:inst_msbvee_4may2020',
        format: 'image/png',
@@ -218,13 +220,13 @@ else if(maleg === 'iti'){
        mmylayer.addTo(mymap);
        addWMSLegend(mmylayer.options.layers);
 
-       LAYER = "https://makerghat.urbansciences.in/geoserver/geonode/wms?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetFeatureInfo&LAYERS="+mmylayer.options.layers+"&QUERY_LAYERS="+mmylayer.options.layers;
+       LAYER = "https://communitygis.net/geoserver/geonode/wms?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetFeatureInfo&LAYERS="+mmylayer.options.layers+"&QUERY_LAYERS="+mmylayer.options.layers;
        LayerList.push(mmylayer);
        }
 
        else if(maleg === 'pressc'){
        
-       mmylayer = new L.tileLayer.wms('https://makerghat.urbansciences.in/geoserver/geonode/ows', {
+       mmylayer = new L.tileLayer.wms('https://communitygis.net/geoserver/geonode/ows', {
 
        layers: 'geonode:inst_pressc_4may2020',
        format: 'image/png',
@@ -238,13 +240,13 @@ else if(maleg === 'iti'){
        mmylayer.addTo(mymap);
        addWMSLegend(mmylayer.options.layers);
 
-       LAYER = "https://makerghat.urbansciences.in/geoserver/geonode/wms?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetFeatureInfo&LAYERS="+mmylayer.options.layers+"&QUERY_LAYERS="+mmylayer.options.layers;
+       LAYER = "https://communitygis.net/geoserver/geonode/wms?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetFeatureInfo&LAYERS="+mmylayer.options.layers+"&QUERY_LAYERS="+mmylayer.options.layers;
        LayerList.push(mmylayer);
        }
 
        else if(maleg === 'tec_schl'){
        
-       mmylayer = new L.tileLayer.wms('https://makerghat.urbansciences.in/geoserver/geonode/ows', {
+       mmylayer = new L.tileLayer.wms('https://communitygis.net/geoserver/geonode/ows', {
 
        layers: 'geonode:inst_technical_school_4may2020',
        format: 'image/png',
@@ -258,14 +260,14 @@ else if(maleg === 'iti'){
        mmylayer.addTo(mymap);
        addWMSLegend(mmylayer.options.layers);
 
-       LAYER = "https://makerghat.urbansciences.in/geoserver/geonode/wms?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetFeatureInfo&LAYERS="+mmylayer.options.layers+"&QUERY_LAYERS="+mmylayer.options.layers;
+       LAYER = "https://communitygis.net/geoserver/geonode/wms?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetFeatureInfo&LAYERS="+mmylayer.options.layers+"&QUERY_LAYERS="+mmylayer.options.layers;
        LayerList.push(mmylayer);
        }
 
 
         else if(maleg === 'vti'){
         
-        mmvlayer = new L.tileLayer.wms('https://makerghat.urbansciences.in/geoserver/geonode/ows', {
+        mmvlayer = new L.tileLayer.wms('https://communitygis.net/geoserver/geonode/ows', {
 
         layers: 'geonode:inst_vti_4may2020',
         format: 'image/png',
@@ -278,14 +280,14 @@ else if(maleg === 'iti'){
         mmvlayer.addTo(mymap);
         // addWMSLegend(mmvlayer.options.layers);
 
-        LAYER = "https://makerghat.urbansciences.in/geoserver/geonode/wms?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetFeatureInfo&LAYERS="+mmvlayer.options.layers+"&QUERY_LAYERS="+mmvlayer.options.layers;
+        LAYER = "https://communitygis.net/geoserver/geonode/wms?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetFeatureInfo&LAYERS="+mmvlayer.options.layers+"&QUERY_LAYERS="+mmvlayer.options.layers;
 
         LayerList.push(mmvlayer);
         }
         
     //bifocal amenity is being displayed through else part
     else{
-        mmzlayer = new L.tileLayer.wms('https://makerghat.urbansciences.in/geoserver/geonode/ows', {
+        mmzlayer = new L.tileLayer.wms('https://communitygis.net/geoserver/geonode/ows', {
 
         layers: 'geonode:inst_other_4may2020',
         format: 'image/png',
@@ -295,7 +297,7 @@ else if(maleg === 'iti'){
     mmzlayer.addTo(mymap);
     // addWMSLegend(mmzlayer.options.layers);
 
-    LAYER = "https://makerghat.urbansciences.in/geoserver/geonode/wms?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetFeatureInfo&LAYERS="+mmzlayer.options.layers+"&QUERY_LAYERS="+mmzlayer.options.layers;
+    LAYER = "https://communitygis.net/geoserver/geonode/wms?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetFeatureInfo&LAYERS="+mmzlayer.options.layers+"&QUERY_LAYERS="+mmzlayer.options.layers;
 
     LayerList.push(mmzlayer);
 
@@ -415,7 +417,7 @@ function addVillageLayer(){
     // village_layer = source.getLayer('geonode:maha_rural_plus_urban');
     // village_layer.addTo(mymap);
     // console.log("Hi");
-    villayer = new L.tileLayer.wms('https://makerghat.urbansciences.in/geoserver/geonode/ows', {
+    villayer = new L.tileLayer.wms('https://communitygis.net/geoserver/geonode/ows', {
 
     layers: 'geonode:maha_taluka_29april2020',
     format: 'image/png',
@@ -435,7 +437,7 @@ function clearAllLayers(){
  }
 
 function addWMSLegend(layer){
-    lagendGraphic = "https://makerghat.urbansciences.in/geoserver/wms?REQUEST=GetLegendGraphic&VERSION=1.0.0&FORMAT=image/png&WIDTH=20&HEIGHT=20&LAYER="+layer;
+    lagendGraphic = "https://communitygis.net/geoserver/wms?REQUEST=GetLegendGraphic&VERSION=1.0.0&FORMAT=image/png&WIDTH=20&HEIGHT=20&LAYER="+layer;
     wms_legend = L.wmsLegend(lagendGraphic);
 }
 
