--- a/community_gis/templates/dashboard/solidwastemanagement.html
+++ b/community_gis/templates/dashboard/solidwastemanagement.html
@@ -266,7 +266,7 @@
     }
 
 
-const domain = ['https://makerghat.urbansciences.in/','http://localhost/'];
+const domain = ['https://communitygis.net/','http://localhost/'];
 
 var rootUrl = domain[0] + 'geoserver/geonode/ows';
 
@@ -401,7 +401,7 @@ function onEachFeaturePoint(feature, layer) {
 
 	
 }
-var base_url = "https://makerghat.urbansciences.in/geoserver/geonode/ows?service=WFS&version=1.0.0&request=GetFeature&outputFormat=application/json&";
+var base_url = "https://communitygis.net/geoserver/geonode/ows?service=WFS&version=1.0.0&request=GetFeature&outputFormat=application/json&";
 
 pointLayerList = []
 function displayPoints(layer_name,type){
