--- a/community_gis/templates/dashboard/aspirational.html
+++ b/community_gis/templates/dashboard/aspirational.html
@@ -133,7 +133,7 @@
 
 var geojson;
 
-const domain = ['https://makerghat.urbansciences.in/','http://localhost/'];
+const domain = ['https://communitygis.net/','http://localhost/'];
 var rootUrl = domain[0] + 'geoserver/geonode/ows';
 
 var defaultParameters = {
