--- a/community_gis/templates/dashboard/d3_palgarh_double_slider.html
+++ b/community_gis/templates/dashboard/d3_palgarh_double_slider.html
@@ -113,7 +113,7 @@
             .style("opacity", 0);
 
 
-            var url = "https://makerghat.urbansciences.in/geoserver/geonode/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=geonode%3Ad_palghar&outputFormat=application/json";
+            var url = "https://communitygis.net/geoserver/geonode/ows?service=WFS&version=1.0.0&request=GetFeature&typeName=geonode%3Ad_palghar&outputFormat=application/json";
             var d_palgarh = "";
             fetch(url)
             .then(
