--- a/community_gis/templates/dashboard/tby.html
+++ b/community_gis/templates/dashboard/tby.html
@@ -283,7 +283,7 @@ var structures = {
 
     
 var geojson;
-const domain = ['https://makerghat.urbansciences.in/','http://localhost/'];
+const domain = ['https://communitygis.net/','http://localhost/'];
 var base_url = domain[0] + "geoserver/geonode/ows?service=WFS&version=1.0.0&request=GetFeature&outputFormat=application/json&";
 var info = L.control();
 var attribute_table = L.control({position: 'bottomright'});
